--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -34,6 +34,12 @@
 <!--            </exclusions>-->
         </dependency>
 
+        <!-- mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
