--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,26 +1,40 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/forum
-    username: root
-    password: root
+    username: ${username}
+    password: ${password}
+
   jpa:
     generate-ddl: true
     show-sql: false
+
   security:
     oauth2:
       client:
         registration:
           google:
-            clientId: 129547250063-97i5op9dpcmpmitpa11lcf4510ign4e9.apps.googleusercontent.com
-            clientSecret: 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
+            clientId: ${clientId}
+            clientSecret: ${clientSecret}
             scope:
               - email
               - profile
 
+  mail:
+    host: smtp.yandex.ru
+    port: 465
+    username: ${mailUsername}
+    password: ${mailPassword}
+    protocol: smtps
+
+server:
+  port: 8080
+
 jwt:
   cookieName: jwtToken
-  secret: JAr2PyCQA1j6gJd3Qe_K1Y9OcyzN9t6LtCdaJl06tfpwTKx7
+  secret: ${secret}
   expiration: 86400
 
 upload:
-  path: C:/Users/79523/Desktop/project/Forum/uploads
+  path: ${path}
+
+hostname: localhost:8080
