--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -151,7 +151,7 @@
                                     <includes>
                                         <include>static/</include>
                                         <include>index.html</include>
-                                        <include>favicon.ico</include>
+                                        <include>logo.png</include>
                                     </includes>
                                 </resource>
                             </resources>
