--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -133,6 +133,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -145,6 +150,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>com.example.backend.BackendApplication</mainClass>
+<!--                    <executable>true</executable>-->
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
