--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,11 @@ spring:
   application:
     name: 'Forum'
 
+  servlet:
+    multipart:
+      max-file-size: 30MB
+      max-request-size: 30MB
+
   datasource:
     url: jdbc:mysql://localhost:3306/forum
     username: ${username}
@@ -9,7 +14,7 @@ spring:
 
   jpa:
     generate-ddl: true
-    show-sql: true
+    show-sql: false
 
   security:
     oauth2:
